adds cli implementation